--- a/style_eksternal.css
+++ b/style_eksternal.css
@@ -1,5 +1,5 @@
 nav {
-    background: #20a759;
+    background: #ff0000;
     color: #fff;
     padding: 10px;
 }
@@ -14,7 +14,7 @@ nav a:hover {
 }
 /* ID SELECTOR*/
 #intro {
-    background: #418fb1;
+    background: #2bee04;
     border: 1px solid #099249;
     min-height: 100px;
 }
